--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,8 +12,8 @@
 # </p>
 
 # <p>
-#   <strong>Contnet:</strong>
-#   <%= @post.contnet %>
+#   <strong>content:</strong>
+#   <%= @post.content %>
 # </p>
 
 # <%= link_to 'Edit', edit_post_path(@post) %> |
